--- a/src/index.html
+++ b/src/index.html
@@ -5,11 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <!--===============================================================================================-->
-    <link
-      rel="icon"
-      type="image/png"
-      href="./public/images/favicon.ico"
-    />
+    <link rel="icon" type="image/png" href="./public/images/favicon.ico" />
     <!--===============================================================================================-->
   </head>
   <body>
@@ -53,7 +49,7 @@
 
         <div class="p-t-50 p-b-60">
           <p class="m1-txt1 p-b-36">
-            <span class="m1-txt2" style="color:cadetblue;">Treve</span>, the
+            <span class="m1-txt2" style="color: cadetblue;">Treve</span>, the
             future of barbershops is
             <span class="m1-txt2">about to launch 🚀</span>, be part of it!
           </p>
@@ -139,7 +135,7 @@
         </div>
       </div>
     </div>
-    
+
     <script src="vendor/jquery/jquery-3.2.1.min.js"></script>
     <script src="vendor/bootstrap/js/popper.min.js"></script>
     <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
@@ -154,7 +150,7 @@
         /*Set Endtime here*/
         /*Endtime must be > current time*/
         endtimeYear: 2020,
-        endtimeMonth: 8,
+        endtimeMonth: 10,
         endtimeDate: 1,
         endtimeHours: 00,
         endtimeMinutes: 0,
@@ -169,6 +165,5 @@
         scale: 1.1,
       });
     </script>
-
   </body>
 </html>
