⚡️ Update release date

--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
       <!-- Coutdown -->
       <div
         class="flex-c-m bg-img1 size2 where1 overlay1 where2 respon2"
-        style="background-image: url('./public/images/background.jpg');"
+        style="background-image: url('./public/images/background.jpg')"
       >
         <div class="wsize2 flex-w flex-c-m cd100 js-tilt">
           <div class="flex-col-c-m size6 bor2 m-l-10 m-r-10 m-t-15">
@@ -49,14 +49,14 @@
 
         <div class="p-t-50 p-b-60">
           <p class="m1-txt1 p-b-36">
-            <span class="m1-txt2" style="color: cadetblue;">Treve</span>, the
+            <span class="m1-txt2" style="color: cadetblue">Treve</span>, the
             future of barbershops is
             <span class="m1-txt2">about to launch 🚀</span>, be part of it!
           </p>
 
           <div
             id="success-alert"
-            style="display: none;"
+            style="display: none"
             class="alert alert-success alert-dismissible"
             data-alert="alert"
           >
@@ -69,7 +69,7 @@
 
           <div
             id="already-subscribed-alert"
-            style="display: none;"
+            style="display: none"
             class="alert alert-warning alert-dismissible"
             data-alert="alert"
           >
@@ -82,7 +82,7 @@
 
           <div
             id="error-alert"
-            style="display: none;"
+            style="display: none"
             class="alert alert-danger alert-dismissible"
             data-alert="alert"
           >
@@ -149,8 +149,8 @@
       $(".cd100").countdown100({
         /*Set Endtime here*/
         /*Endtime must be > current time*/
-        endtimeYear: 2020,
-        endtimeMonth: 10,
+        endtimeYear: 2021,
+        endtimeMonth: 1,
         endtimeDate: 1,
         endtimeHours: 00,
         endtimeMinutes: 0,
